# financial-forge

./: .gitpod.Dockerfile  .gitpod.yml  App.tsx  Cargo.toml  babel.config.js  git-sync.sh  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  update-deps.sh
.expo/: settings.json
.pnpm-store/v10/index/00/: 4498691386206296c16994c90a145dc6ef6946639a979c0b96ee02b5f1628b-@expo+ngrok@4.1.3.json  5debecfe5d5b12fc331c884d132539140d68e036224005693af893b054ba68-compressible@2.0.18.json  63ab88da7deaf3417771ed53e47314473be457d1e729a262ff04e79dc8ef54-is-root@2.1.0.json  aa5a6251e7f2de1255b3870b2f9be7e28a82f478bebb03f2f6efadb890269b-base64-js@1.5.1.json  c70369d79f0488c3d74051aa45b0f96fd576f5c4a2647a6846747e141102fe-@react-native+assets-registry@0.81.4.json  e22049009ea62258c0fdc04671b1fb95674eed870587736c63f8e5e2f0d6fa-glob-parent@5.1.2.json
.pnpm-store/v10/index/01/: 4466e5fd236043b27418fb550955bc3ae378582d8437441791f574ffba98da-safe-array-concat@1.1.3.json  56f0dd42767bd6eaeb8bd2692f409b47e37b53daf296c6a934ec9977da2223-path-is-absolute@1.0.1.json
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/data/: Cargo.toml
src/: App.tsx  storage.ts  theme.ts  types.ts
src/components/: DebtForm.tsx  DebtListItem.tsx
src/context/: DebtContext.tsx  DebtsContext.tsx  SettingsContext.tsx
src/screens/: AddDebtScreen.tsx  AvalanchePlanScreen.tsx  DashboardScreen.tsx  DebtDetailsScreen.tsx  DebtsScreen.tsx  EditDebtScreen.tsx  HomeScreen.tsx  SettingsScreen.tsx
src/utils/: payoff.ts
(+1301 files in other folders)
