[workspace]
members = [
    "crates/core",
    "crates/data",
    "crates/api"
]
resolver = "2"

# Optional: enforce consistent Rust version
[workspace.package]
edition = "2021"

[workspace.dependencies]
# Shared dependencies across crates can go here
serde = { version = "1.0", features = ["derive"] }
